--- a/scrapy.cfg
+++ b/scrapy.cfg
@@ -6,6 +6,6 @@
 [settings]
 default = hoover.settings
 
-[deploy]
-#url = http://localhost:6800/
-project = hoover
+[deploy:zhiku-server]
+url = http://47.74.85.135:6800/
+project = zhiku_hoover
